Fixed input overlapping with tabs

--- a/api-catalog-ui/frontend/src/components/Wizard/wizard.css
+++ b/api-catalog-ui/frontend/src/components/Wizard/wizard.css
@@ -8,8 +8,8 @@
  * Copyright Contributors to the Zowe Project.
  */
 
-.dialog-footer {
-    border-top: none;
+.wizardForm {
+    padding: 0 2px;
 }
 
 .wizardForm .entry {
